chore: Reproducing petermikitsh solution

--- a/package.json
+++ b/package.json
@@ -13,7 +13,14 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "@angular/common": "8.2.14",
+    "@angular/compiler": "8.2.14",
+    "@angular/core": "8.2.14",
+    "@angular/platform-browser": "8.2.14",
+    "@angular/platform-browser-dynamic": "8.2.14",
+    "reflect-metadata": "0.1.13",
+    "zone.js": "0.10.3"
   },
   "scripts": {
     "start": "react-scripts start",
